# pp-kmeans

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cluster.cpp  Cluster.h  Makefile  Party.cpp  Party.h  Point.cpp  Point.h  README.md  cmake_install.cmake  main.cpp  pp_kmeans  pp_kmeans.cbp
eculidean-distance/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
eculidean-distance/secret_sharing/: multiplication_party.h  party.h  secret_sharing.h
eculidean-distance/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  addition.cpp  additive_party.h  cmake_install.cmake  distance_party.h  eculidean_distance.cpp  multiplication.cpp  secret_sharing.h
